--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalized Messaging App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="login-container">
@@ -19,7 +19,7 @@
         <button class="logout-btn" onclick="logout()">Logout</button>
         <h2>Messages</h2>
         <div id="quote-container"></div>
-        <div id="message-list"></div>
+        <div id="message-list" class="message-list"></div>
 
         <h2>New Message</h2>
         <textarea id="message-content" placeholder="Write your message here..."></textarea>
