--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <img src="path/to/logo.png" alt="Logo" class="logo">
-            <h1>متجر بكسلاب</h1>
-            <img src="path/to/logo.png" alt="Logo" class="logo">
-        </div>
+        <h1>متجر بكسلاب</h1>
         <div id="admin-section">
-            <h2>تسجيل دخول خاص بالأدمن</h2>
+            <h2>تسجيل دخول الأدمن</h2>
             <form id="admin-login-form">
                 <input type="text" id="username" placeholder="اسم المستخدم">
                 <input type="password" id="password" placeholder="كلمة السر">
