--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>متجر بكسلاب</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <img src="path/to/logo.png" alt="Logo" class="logo">
+            <h1>متجر بكسلاب</h1>
+            <img src="path/to/logo.png" alt="Logo" class="logo">
+        </div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#" onclick="showSection('projects-section')">المشاريع</a></li>
+                <li><a href="#" onclick="showSection('news-section')">الأخبار</a></li>
+                <li><a href="#" onclick="showSection('apps-section')">التطبيقات</a></li>
                 <li><a href="#" onclick="showSection('ads-section')">الإعلانات</a></li>
             </ul>
         </nav>
