--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="path/to/logo.png" alt="Logo" class="logo">
+            <img src="photo/logo.png" alt="Logo" class="logo">
             <h1>متجر بكسلاب</h1>
-            <img src="path/to/logo.png" alt="Logo" class="logo">
+            <img src="photo/logo.png" alt="Logo" class="logo">
         </div>
         <nav class="navbar">
             <ul>
