--- a/index.html
+++ b/index.html
@@ -50,38 +50,38 @@
         <div id="content">
             <div id="projects-section" class="section">
                 <i class="fas fa-project-diagram section-icon"></i>
-                <div id="projects-gallery" class="gallery">
+                <div id="projects-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image1" alt="">
-                    <img src="path/to/your/image2" alt="">
-                    <img src="path/to/your/image3" alt="">
+                    <img src="path/to/your/image1.jpg" alt="Project 1">
+                    <img src="path/to/your/image2.jpg" alt="Project 2">
+                    <img src="path/to/your/image3.jpg" alt="Project 3">
                 </div>
             </div>
             <div id="news-section" class="section" style="display: none;">
                 <i class="fas fa-newspaper section-icon"></i>
-                <div id="news-gallery" class="gallery">
+                <div id="news-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image4" alt="">
-                    <img src="path/to/your/image5" alt="">
-                    <img src="path/to/your/image6" alt="">
+                    <img src="path/to/your/image4.jpg" alt="News 1">
+                    <img src="path/to/your/image5.jpg" alt="News 2">
+                    <img src="path/to/your/image6.jpg" alt="News 3">
                 </div>
             </div>
             <div id="apps-section" class="section" style="display: none;">
                 <i class="fas fa-mobile-alt section-icon"></i>
-                <div id="apps-gallery" class="gallery">
+                <div id="apps-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image7" alt="">
-                    <img src="path/to/your/image8" alt="">
-                    <img src="path/to/your/image9" alt="">
+                    <img src="path/to/your/image7.jpg" alt="App 1">
+                    <img src="path/to/your/image8.jpg" alt="App 2">
+                    <img src="path/to/your/image9.jpg" alt="App 3">
                 </div>
             </div>
             <div id="ads-section" class="section" style="display: none;">
                 <i class="fas fa-ad section-icon"></i>
-                <div id="ads-gallery" class="gallery">
+                <div id="ads-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image10" alt="">
-                    <img src="path/to/your/image11" alt="">
-                    <img src="path/to/your/image12" alt="">
+                    <img src="path/to/your/image10.jpg" alt="Ad 1">
+                    <img src="path/to/your/image11.jpg" alt="Ad 2">
+                    <img src="path/to/your/image12.jpg" alt="Ad 3">
                 </div>
             </div>
         </div>
