--- a/index.html
+++ b/index.html
@@ -52,36 +52,30 @@
                 <i class="fas fa-project-diagram section-icon"></i>
                 <div id="projects-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image1.jpg" alt="Project 1">
-                    <img src="path/to/your/image2.jpg" alt="Project 2">
-                    <img src="path/to/your/image3.jpg" alt="Project 3">
+                    <img src="path" alt="">
+                    
+                    
                 </div>
             </div>
             <div id="news-section" class="section" style="display: none;">
                 <i class="fas fa-newspaper section-icon"></i>
                 <div id="news-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image4.jpg" alt="News 1">
-                    <img src="path/to/your/image5.jpg" alt="News 2">
-                    <img src="path/to/your/image6.jpg" alt="News 3">
+                    <img src="path/" alt="">
                 </div>
             </div>
             <div id="apps-section" class="section" style="display: none;">
                 <i class="fas fa-mobile-alt section-icon"></i>
                 <div id="apps-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image7.jpg" alt="App 1">
-                    <img src="path/to/your/image8.jpg" alt="App 2">
-                    <img src="path/to/your/image9.jpg" alt="App 3">
+                    <img src="path" alt="">
                 </div>
             </div>
             <div id="ads-section" class="section" style="display: none;">
                 <i class="fas fa-ad section-icon"></i>
                 <div id="ads-gallery" class="gallery grid">
                     <!-- أمثلة على الصور -->
-                    <img src="path/to/your/image10.jpg" alt="Ad 1">
-                    <img src="path/to/your/image11.jpg" alt="Ad 2">
-                    <img src="path/to/your/image12.jpg" alt="Ad 3">
+                    <img src="path" alt="">
                 </div>
             </div>
         </div>
