--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         <div id="projectsContainer" class="projects-container">
             <!-- المشاريع ستظهر هنا -->
         </div>
+
+        <div id="appsContainer" class="apps-container">
+            <!-- التطبيقات ستظهر هنا -->
+        </div>
+
+        <div id="newsContainer" class="news-container">
+            <!-- الأخبار ستظهر هنا -->
+        </div>
     </div>
     <script src="scripts.js"></script>
 </body>
